samples/_failures_safe/1761358459_1bd5c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12f6bc8a.c: In function ‘main’:
./samples/SAFE/__tmp_12f6bc8a.c:167:9: error: expected declaration or statement at end of input
  167 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_12f6bc8a.c:167:9: error: expected declaration or statement at end of input
